@@ -1,11 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX wireshark-1.6.4-build.patch 396 RMD160 fa909e374c80f0c637a459750d305cd636e7e18a SHA1 825cb721d7d30cfdec5f53e0b38fa7ee8891ec20 SHA256 8648c0eda8fd4393d4b0513c4d6673d0568b7341f920e55e7ebe7391d1e3b430
 AUX wireshark-1.6.4-doc-build.patch 501 RMD160 65ea45bc7014c5f0bb556b3c964c45d2b0d2f582 SHA1 ea7c00ed98613581791c7c9e53f009efee5e6c08 SHA256 2ae9ad7ce2ceb1b7a2430ae71d04cdb4f9173d74e0d67667965226d8f43d1945
 AUX wireshark-1.6.6-gtk-pcap.patch 841 RMD160 a1b003dcf1deee02fe2c15b96cbfda50c094d64d SHA1 0d8ea55014b696c04d91e73780af2109b86cddaa SHA256 862c301f450fcb775e3bd907e5a6ca667b5a11b819768b66a7c848c2c3c90d8a
 DIST wireshark-1.6.6.tar.bz2 21527655 RMD160 27a3d7fa7f78350dabb00d3ee382c335f7e110ae SHA1 0b60fd7d117e78292548fd50d71f750a5dca8b37 SHA256 44dae5898209ece3803c6ce7c9bbb8544b565dd301e8890a6a2213f4a6a2172e
 DIST wireshark-1.6.7.tar.bz2 21524856 RMD160 20ced0176d0c2f7a856078d033ebf7ba531f7f57 SHA1 392c4f35cd8d16287ba9eba3afec226fcadd9746 SHA256 1e9d806d02ebfc3a70b948b4e82d19ba5bcde671eb229b18569149f95681f17b
 DIST wireshark-1.6.8.tar.bz2 21967111 RMD160 858ee1bdcf61658356c1acd386135eb071205dd6 SHA1 fb79058c66944581b822e4d8370848f953cfc9d4 SHA256 d4fbaffa4fd32543ed1d03b3097bf89a7d492e6d02e9bf8f8aa8a71281f3057f
-EBUILD wireshark-1.6.6.ebuild 6448 RMD160 a1c94d441cd9126b3bc0a9efc10eb8557353ffa5 SHA1 ab37cf59e00d3c6725b3545969722c96b2275cf9 SHA256 e4331c77f75350359a28ab01eb93b874cac333cbfe03fa92458c4c18f303f6fd
-EBUILD wireshark-1.6.7.ebuild 6459 RMD160 deb19cc4f6e6374b10d0932d458816b11d338cb2 SHA1 35436713ff1609d64472fb3a0cc97bb3346a97a0 SHA256 7cc769c7e1a0bc60ecf1a150e092ffc246d2ddf93f520235e0219d6216c0c886
-EBUILD wireshark-1.6.8.ebuild 6455 RMD160 64dfd4444e4cd6ed8a4a464a74656d0bbf978b52 SHA1 6088ecf17c73fa0e3d4eda1a22858bb4b0fdeda8 SHA256 abb571db8bb2be3b0c5f5778f15b717bffca743e8bf830e571be4110e72181f2
-MISC ChangeLog 50453 RMD160 2e287eefa3db46647518a247005ea24adf54cf5d SHA1 a5c33540c4c6cc2f01f2fdadbc025c4d22f1887d SHA256 2ddce963901cd6515e848bbeb1b6adfe50731eb9ffdc695d773cdef30f7c37c7
+EBUILD wireshark-1.6.6.ebuild 6447 RMD160 7b4176855f06860402b49ad8873f04bbfdbf77ac SHA1 1f8de151f779136f5d9391b02be04085273ba104 SHA256 56cc8b99ef8e57baca9f23b03e1126b6c9163abd26128bc7a497823886c7c3a9
+EBUILD wireshark-1.6.7.ebuild 6457 RMD160 ca4413fd0cfc1927a5d6171b1d78a94f9f25d766 SHA1 75555eefb9c21ec7d35ad5391b0dcda8e1ea68a7 SHA256 c523d1afe7143b0a6f1e6eebb41b0bb0c95677b74d8d19fb13e4018c117833a9
+EBUILD wireshark-1.6.8.ebuild 6453 RMD160 db210db8a926c4302a31e8936e0ab2ad366825c5 SHA1 d6f295322ba226fdd778e6747ae724e5f88754bd SHA256 45983c22afd371ca12b7cfaaa7b8657bb2c661ecc78c7d639cd8f7067e73670d
+MISC ChangeLog 50640 RMD160 b327f745d0573f9c1e08a41a60c0dd20639d8a38 SHA1 dece34b34d1412618a33d5172fd64969c8a6346f SHA256 271118783f8ba5621c5108882d2026e00f55af7bc903cbc4b2287cbf98ad3d21
 MISC metadata.xml 2242 RMD160 66dbbb758acc194df17217183b60a56f61fced38 SHA1 4498ea4c0f0f04213fd1cba2fd3de44565058f7d SHA256 2dfaef45c385c37c7ae8af96f5d8c58d9bff8f6186d55be8f2d034ebd0c60869
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEARECAAYFAk/WuwUACgkQ/ejvha5XGaON7ACfVvjXXtpTbkd4GYoKvqxE0AJh
+pnUAoLTu7C9yVqZ7HcjAnAGO3FQKwVn1
+=20sS
+-----END PGP SIGNATURE-----
