@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.349 2012/06/08 18:11:46 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.350 2012/06/12 03:43:59 zmedico Exp $
+
+  12 Jun 2012; Zac Medico <zmedico@gentoo.org> wireshark-1.6.6.ebuild,
+  wireshark-1.6.7.ebuild, wireshark-1.6.8.ebuild:
+  inherit user for enewgroup, and remove unused libtool inherit
 
   08 Jun 2012; Brent Baude <ranger@gentoo.org> wireshark-1.6.8.ebuild:
   Marking wireshark-1.6.8 ppc for bug 417203
